--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ body {
 }
 
 .signup-btn {
+    height: 25px;
     background-color: #3882F6;
     color: #E5E7EB;
     padding: 5px 25px;
@@ -122,4 +123,37 @@ img {
 .author {
     text-align: right;
     font-weight: 700;
+}
+
+/* Section Four */
+
+.section-four {
+    padding: 50px 200px;
+}
+
+.sign-up {
+    display: flex;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 15px 100px;
+    gap: 50px;
+    border: transparent;
+    border-radius: 5px;
+    align-items: center;
+}
+
+.sign-up > div > p:first-child {
+    font-weight: 700;
+    font-size: 1.2em;
+    margin-bottom: -10px;
+}
+
+.sign-up > div > p:last-child {
+    font-size: 0.8em;
+}
+
+.sign-up > button {
+    display: block;
+    border: 1px solid #E5E7EB;
+    margin-left: auto;
 }
