--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,21 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: "Light-Font";
+    src: url(resources/Ferrari-SansLight.ttf);
+}
+
+@font-face {
+    font-family: "Regular-Font";
+    src: url(resources/Ferrari-SansRegular.ttf);
+}
+
+@font-face {
+    font-family: "Bold-Font";
+    src: url(resources/Ferrari-SansMedium.ttf);
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -13,15 +28,21 @@ body {
 /* Section One */
 
 .section-one {
-    background-color: #1F2937;
-    padding: 0 200px 100px 200px;
+    background-image: url(resources/landing-page-s1-bg-5.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0 100px 100px 100px;
+    position: relative;
 }
 
 .title {
     display: flex;
     color: #F9FAF8;
+    font-family: "Bold-Font";
     font-size: 24px;
     font-weight: 700;
+    margin: 10px;
 }
 
 .title > ul {
@@ -35,32 +56,32 @@ body {
     font-weight: normal;
 }
 
+.title > img {
+    width: 50px;
+}
+
 .sub-s1 {
     display: flex;
     align-items: center;
-    gap: 48px;
 }
 
 .sub-s1 > div {
-    width: 400px;
+    width: 600px;
 }
 
 .sub-s1 > div > h1 {
     color: #F9FAF8;
+    font-family: "Bold-Font";
     font-weight: 900;
     font-size: 42px;
     margin-bottom: 0;
 }
 
-.sub-s1 > div > p {
+.sub-s1 > div > a {
+    font-family: "Light-Font";
     color: #E5E7EB;
-    font-size: 18px;
-}
-
-.sub-s1 > img {
-    margin-left: auto;
-    height: 250px;
-    width: 500px
+    text-decoration: underline;
+    text-underline-offset: 3px;
 }
 
 .signup-btn {
