--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ body {
     font-family: Roboto, sans-serif;
 }
 
+a {
+    cursor: pointer;
+}
+
 /* Section One */
 
 #section-one {
@@ -68,8 +72,7 @@ body {
 }
 
 .title > ul > li > a:hover {
-    transform: scale(1.1); 
-    cursor: pointer;
+    transform: scale(1.1);
 }
 
 .title > img {
@@ -173,21 +176,90 @@ img {
 }
 
 /* Section Three */
-
 #section-three {
-    background-color: #E5E7EB;
-    padding: 50px 300px;
+    display: flex;
 }
 
-.quote {
-    font-style: italic;
-    color: #1F2937;
-    font-size: 20px;
+/* Lewis Hamilton */
+.LH44 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    height: 500px;
+    width: 50%;
+    margin-right: auto;
+    background: url(resources/LH44.jpg) 50% 25% no-repeat;
 }
 
-.author {
+.LH44 > .drivers-text > h1 {
+    color: #E5E7EB;
+    font-family: "Regular-Font";
+    align-self: flex-end;
+}
+
+.LH44 > .drivers-text > .statistics {
     text-align: right;
-    font-weight: 700;
+}
+
+.LH44 .drivers-text .statistics,
+.CL16 .drivers-text .statistics {
+    transition: visibility 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.LH44 .drivers-text h1:hover + .statistics,
+.CL16 .drivers-text h1:hover + .statistics {
+    visibility: visible;
+    opacity: 1;
+}
+
+/* Charles Leclerc */
+.CL16 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    height: 500px;
+    width: 50%;
+    background: url(resources/CL16.jpg) 25% 15% no-repeat;
+}
+
+.CL16 > .drivers-text > h1 {
+    color: #E5E7EB;
+    font-family: "Regular-Font";
+    align-self: flex-start;
+}
+
+.CL16 .drivers-text {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+}
+
+/* Statistics */
+.statistics {
+    display: flex;
+    flex-direction: column;
+    color: #E5E7EB;
+    font-family: "Light-Font";
+    visibility: hidden;
+    opacity: 0;
+}
+
+/* Drivers Text */
+.drivers-text {
+    margin: 15px;
+}
+
+.drivers-text h1 {
+    transition: transform 0.25s ease-in-out;
+}
+
+.drivers-text h1:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    text-underline-offset: 1px;
+    transform: scale(1.05)
 }
 
 /* Section Four */
